--- a/pmlc2/index7bec.html
+++ b/pmlc2/index7bec.html
@@ -9,11 +9,11 @@
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>PMLC论文检测-</title>
-	    <link rel="stylesheet" type="text/css" href="../../css.celunwen.com/assets_v2/css/common9675.css?v=2.3.178" />
-    <link rel="stylesheet" type="text/css" href="../../css.celunwen.com/assets_v2/css/webuploader9675.css?v=2.3.178" />
-    <link rel="stylesheet" type="text/css" href="../../css.celunwen.com/assets_v2/css/style9675.css?v=2.3.178" />
-    <link rel="stylesheet" type="text/css" href="../../css.celunwen.com/assets_v2/css/moreUpload9675.css?v=2.3.178" />
-    <link rel="stylesheet" type="text/css" href="../../css.celunwen.com/assets_v2/css/footer9675.css?v=2.3.178" />
+	    <link rel="stylesheet" type="text/css" href="../css/common9675.css?v=2.3.178" />
+    <link rel="stylesheet" type="text/css" href="../css/webuploader9675.css?v=2.3.178" />
+    <link rel="stylesheet" type="text/css" href="../css/style9675.css?v=2.3.178" />
+    <link rel="stylesheet" type="text/css" href="../css/moreUpload9675.css?v=2.3.178" />
+    <link rel="stylesheet" type="text/css" href="../css/footer9675.css?v=2.3.178" />
     <script type="text/javascript">
         var $CONFIG = {};
                 	$CONFIG['uid']='1705';
@@ -68,8 +68,8 @@
 <body>
  <!-- 头部-->
  <div class="header" >
-   <h2 class="logo"><img id="logo_pic" src="../../css.celunwen.com/assets_v2/images/common/logo_pmlc29575.png?v=01151134"/></h2>
-   <p class="header_rit"><img src="../../css.celunwen.com/assets_v2/images/common/head_rt.png"/></p>
+   <h2 class="logo"><img id="logo_pic" src="../images/common/logo_pmlc29575.png?v=01151134"/></h2>
+   <p class="header_rit"><img src="../images/common/head_rt.png"/></p>
  </div>
 <!-- 中间区域(除了头、尾部)-->
 <div class="mainCont">
@@ -79,10 +79,10 @@
         <div class="contactInfo m_tp45" style="padding-bottom: 0px;">
             <h3>获取帮助</h3>
             <ul class="p_tp20 p_lf40">
-                <li id="get_help" class="m_tp25"><img src="../../css.celunwen.com/assets_v2/images/common/doubt.png" style="width:20px"><a href="javascript:;" class="iconText">常见问题</a></li>
+                <li id="get_help" class="m_tp25"><img src="../images/common/doubt.png" style="width:20px"><a href="javascript:;" class="iconText">常见问题</a></li>
                 <li>&nbsp;</li>
             	                <li><p>旺旺：</p><a href="http://www.taobao.com/webww/ww.php?ver=3&amp;touid=intermind&amp;siteid=cntaobao&amp;status=2&amp;charset=utf-8"><img border="0" src="http://amos.alicdn.com/realonline.aw?v=2&amp;uid=intermind&amp;site=cntaobao&amp;s=1&amp;charset=utf-8" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li>
-                                                                				<li class="m_tp25"><img src="../../css.celunwen.com/assets_v2/images/common/icon01.png" class="icon01"/><a id="report_demo" href="javascript:;" class="iconText" target='_blank'>报告样例</a></li>
+                                                                				<li class="m_tp25"><img src="../images/common/icon01.png" class="icon01"/><a id="report_demo" href="javascript:;" class="iconText" target='_blank'>报告样例</a></li>
             </ul>
                     </div>
         <!--系统检测文献库栏目-->
@@ -121,7 +121,7 @@
                     <!--导航-->
                    <div class="tabBar">
                      <ul>
-                     <li><a href="../pmlc2.html">单篇上传</a></li>
+                     <li><a href="../index.html">单篇上传</a></li>
                      <li class="selected"><a href="index7bec.html?multiple=1">多篇上传</a></li>
                      <li><a href="report.html">下载检测报告</a></li>
                                                                </ul>
@@ -224,7 +224,8 @@
             权威的文献相似度对比系统，由<a href="http://www.kuailelunwen.com/" target="_blank" style="color:#afafaf;">快乐论文自助系统提供技术支持</a>。
         </p>
             </div>
-</div><!--footer结束-->
+</div>
+<!--footer结束-->
 
 <div id="mask"></div>
  <div class="model dbLayModel">
@@ -283,14 +284,14 @@
 	</div>
 </div>
 <div class="view_kf"></div>
-<script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/common/jquery-1.11.3.min9675.js?v=2.3.178"></script>
-<script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/check_card_pay9675.js?v=2.3.178"></script>
-<script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/common/jquery.splendid.textchange9675.js?v=2.3.178"></script>
- <script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/common/webuploader9675.js?v=2.3.178"></script>
- <script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/common/common9675.js?v=2.3.178"></script>
- <script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/common/qrcode9675.js?v=2.3.178"></script>
- <script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/uploadPaper29675.js?v=2.3.178"></script>
- <script type="text/javascript" src="../../css.celunwen.com/assets_v2/js/payment9675.js?v=2.3.178"></script>
+<script type="text/javascript" src="../js/common/jquery-1.11.3.min9675.js?v=2.3.178"></script>
+<script type="text/javascript" src="../js/check_card_pay9675.js?v=2.3.178"></script>
+<script type="text/javascript" src="../js/common/jquery.splendid.textchange9675.js?v=2.3.178"></script>
+ <script type="text/javascript" src="../js/common/webuploader9675.js?v=2.3.178"></script>
+ <script type="text/javascript" src="../js/common/common9675.js?v=2.3.178"></script>
+ <script type="text/javascript" src="../js/common/qrcode9675.js?v=2.3.178"></script>
+ <script type="text/javascript" src="../js/uploadPaper29675.js?v=2.3.178"></script>
+ <script type="text/javascript" src="../js/payment9675.js?v=2.3.178"></script>
  
  <script>
  $(document).ready(function(){
@@ -299,16 +300,17 @@
  });
  </script>
 
-	<script src="../../css.celunwen.com/assets_v2/js/jquery.min.js"></script>
+	<script src="../js/jquery.min.js"></script>
 
 <script>
 	var $jq = jQuery.noConflict();
 </script>
 
-<link rel="stylesheet" href="../../css.celunwen.com/assets_v2/css/fenxiao/common.css" />
+<link rel="stylesheet" href="../css/fenxiao/common.css" />
 <div id="unionid_page_id" style="display:none;">DYwIPEb50Qzp9DE3</div>
-<script src="../../css.celunwen.com/assets_v2/js/layer/layer9675.js?v=2.3.178" jquey-data="$jq"></script>
-<script id="login_script" src="../../css.celunwen.com/assets_v2/js/fenxiao/common9675.js?v=2.3.178" fx_uid="" priv_style_path="//css.celunwen.com" is_force_open_login="" is_hand_close_login="" no_trigger_fx_login=""></script> <div style="display:none"><a target="cyxyv" href="https://v.yunaq.com/certificate?domain=cnki2.celunwen.com&amp;from=label&amp;code=90020"> <img src="../../aqyzmedia.yunaq.com/labels/label_sm_90020.png"></a></div><script>var _hmt = _hmt || [];(function(){var hm = document.createElement("script");hm.src = "../../hm.baidu.com/hmd98b.js?16bab14dc4d4c59962e75db7d4649263";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm, s);})();</script>
+<script src="../js/layer/layer9675.js?v=2.3.178" jquey-data="$jq"></script>
+<script id="login_script" src="../js/fenxiao/common9675.js?v=2.3.178" fx_uid="" priv_style_path="//css.celunwen.com" is_force_open_login="" is_hand_close_login="" no_trigger_fx_login=""></script>
+ <div style="display:none"><a target="cyxyv" href="https://v.yunaq.com/certificate?domain=cnki2.celunwen.com&amp;from=label&amp;code=90020"> <img src="../../aqyzmedia.yunaq.com/labels/label_sm_90020.png"></a></div><script>var _hmt = _hmt || [];(function(){var hm = document.createElement("script");hm.src = "../../hm.baidu.com/hmd98b.js?16bab14dc4d4c59962e75db7d4649263";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm, s);})();</script>
 
 <input type="hidden" id="device_id" value="">
 <input type="hidden" id="script_url" value="">
