--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <ul class="p_tp20 p_lf40">
                 <li id="get_help" class="m_tp25"><img src="images/common/doubt.png" style="width:20px"><a href="javascript:;" class="iconText">常见问题</a></li>
                 <li>&nbsp;</li>
-                                <li><p>旺旺：</p><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&amp;touid=intermind&amp;siteid=cntaobao&amp;status=2&amp;charset=utf-8"><img border="0" src="http://amos.alicdn.com/realonline.aw?v=2&amp;uid=intermind&amp;site=cntaobao&amp;s=1&amp;charset=utf-8" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li>
+                                <!-- <li><p>旺旺：</p><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&amp;touid=intermind&amp;siteid=cntaobao&amp;status=2&amp;charset=utf-8"><img border="0" src="http://amos.alicdn.com/realonline.aw?v=2&amp;uid=intermind&amp;site=cntaobao&amp;s=1&amp;charset=utf-8" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li> -->
                                                                                 <li class="m_tp25"><img src="images/common/icon01.png" class="icon01"/><a id="report_demo" href="javascript:;" class="iconText" target='_blank'>报告样例</a></li>
             </ul>
                     </div>
@@ -126,7 +126,7 @@
                      <input type="hidden" id="hide_tid" value="">
                      <ul>
                      <li class="selected"><a id="single_upload" href="pmlc2.html">单篇上传</a></li>
-                     <li><a id="multiple_upload" href="pmlc2/index7bec.html?multiple=1">多篇上传</a></li>
+                     <!-- <li><a id="multiple_upload" href="pmlc2/index7bec.html?multiple=1">多篇上传</a></li> -->
                      <li><a href="pmlc2/report.html">下载检测报告</a></li>
 
                                                                </ul>
@@ -284,11 +284,9 @@
         <ul class="clearfix">
                                                                     </ul>
         <p>Copyright &copy; 2012-2020
-            ,
-                            cnki2.celunwen.com
                         . All Rights Reserved  <a href="http://www.beian.miit.gov.cn/" target="_blank">京ICP备12045736号-4</a>&nbsp; | &nbsp;
             <span class="glyphicon glyphicon-stats"></span>
-            权威的文献相似度对比系统，由快乐论文自助系统提供技术支持。
+            权威的文献相似度对比系统，由微风系统提供技术支持。
         </p>
             </div>
 </div>
