--- a/pmlc2/report.html
+++ b/pmlc2/report.html
@@ -103,7 +103,7 @@
             <ul class="p_tp20 p_lf40">
                 <li id="get_help" class="m_tp25"><img src="../images/common/doubt.png" style="width:20px"><a href="javascript:;" class="iconText">常见问题</a></li>
                 <li>&nbsp;</li>
-                                <li><p>旺旺：</p><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&amp;touid=intermind&amp;siteid=cntaobao&amp;status=2&amp;charset=utf-8"><img border="0" src="http://amos.alicdn.com/realonline.aw?v=2&amp;uid=intermind&amp;site=cntaobao&amp;s=1&amp;charset=utf-8" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li>
+                                <!-- <li><p>旺旺：</p><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&amp;touid=intermind&amp;siteid=cntaobao&amp;status=2&amp;charset=utf-8"><img border="0" src="http://amos.alicdn.com/realonline.aw?v=2&amp;uid=intermind&amp;site=cntaobao&amp;s=1&amp;charset=utf-8" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li> -->
                                                                             </ul>
                     </div>
         <!--系统检测文献库栏目-->
@@ -143,8 +143,8 @@
                     <!--导航-->
                    <div class="tabBar">
                      <ul>
-                                              <li><a href="../pmlc2.html">单篇上传</a></li>
-                     <li><a href="index7bec.html?multiple=1">多篇上传</a></li>
+                                              <li><a href="../index.html">单篇上传</a></li>
+                     <!-- <li><a href="index7bec.html?multiple=1">多篇上传</a></li> -->
                      <li class="down_report selected"><a href="report.html">下载检测报告</a></li>
                                           </ul>
                    </div>
@@ -160,16 +160,16 @@
                                             <input  type="hidden" value="" id="uploadTmpname">
                                             <input  type="hidden" value="" id="uploadName">
                                             <div id="typePage" style="display:none" pageType="3"></div>
-                                            <input type="text" class="orderNum" id="orderNum" value=""  placeholder="多订单号时，只填任一订单号即可"/>
+                                            <input type="text" class="orderNum" id="orderNum" value=""  placeholder="订单号填写"/>
                                             <p class="inquireBtn">查询结果</p>
-                                            <a href="../pmlc2.html" class="jiance_btn jiance_domain">去检测论文</a>
+                                            <a href="../index.html" class="jiance_btn jiance_domain">去检测论文</a>
                                         </div>
                                                                                 <div class="pointOut">
                                                 <p class="pointTitle" style="color:black;">
-                                                                                                <span class="order-tip">
+                                                                                             <!--    <span class="order-tip">
                                                     <img src="../images/service/paytype_s_0.png" alt="">
                                                     <font class="point-text">什么是淘宝订单编号？</font>
-                                                </span>
+                                                </span> -->
                                                                                                                                                                                                 </p>
                                             <ul class="pointOutImg">
                                                                                        <li>
@@ -276,11 +276,9 @@
         <ul class="clearfix">
                                                                     </ul>
         <p>Copyright &copy; 2012-2020
-            ,
-                            cnki2.celunwen.com
                         . All Rights Reserved  <a href="http://www.beian.miit.gov.cn/" target="_blank">京ICP备12045736号-4</a>&nbsp; | &nbsp;
             <span class="glyphicon glyphicon-stats"></span>
-            权威的文献相似度对比系统，由<a href="http://www.kuailelunwen.com/" target="_blank" style="color:#afafaf;">快乐论文自助系统提供技术支持</a>。
+            权威的文献相似度对比系统，由微风系统提供技术支持</a>。
         </p>
             </div>
 </div>
